@@ -1,3 +1,9 @@
+2008-05-20  Johnny Jacob  <jjohnny@novell.com>
+
+	** Fixes Bug #473198
+	
+	* attachment-reminder.c (strip_text_msg): Ignore signature.
+
 2008-04-07  Ambuj Chitranshi  <ambuj_1075@yahoo.co.in>
 
 	** Fix for bug #484793
